--- a/src/app/layouts/full/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/layouts/full/shared/breadcrumb/breadcrumb.component.html
@@ -2,9 +2,10 @@
   <div>
     <div class="row">
       <div class="col-lg-8 col-sm-6">
-        <h4 class="page-title m-0 f-s-18 f-w-500">
+        <!-- f-s-18 class removed form hq  -->
+        <h4 class="page-title m-0  f-w-500">
           {{ pageInfo?.['title'] }}
-        </h4>
+        </h4> 
         <!-- <div
           class="d-flex align-items-center overflow-hidden justify-content-start list-style-none m-t-8"
         >
