--- a/src/app/pages/apps/client-administraion/client-administraion.component.html
+++ b/src/app/pages/apps/client-administraion/client-administraion.component.html
@@ -2,48 +2,12 @@
 <!-- card 1 -->
 <!-- --------------------------------------------------------------------- -->
 
-<div class="row">
-  <div class="col-lg-3 col-sm-6">
-    <!-- <mat-card class="cardWithShadow text-center">
-        <mat-card-content class="p-24">
-          <div class="d-flex align-items-center">
-            <span class="icon-56 bg-{{ topcard.color }} text-white rounded-circle d-flex align-items-center justify-content-center">
-                <mat-icon role="img" class="mat-icon notranslate f-s-24 material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">local_mall</mat-icon>
-            </span>
-            <div class="m-l-12 text-left">
-              <h4 class="mat-subtitle-2 f-s-20 f-w-400 m-t-8">
-                {{ topcard.title }}
-              </h4>
-              <h6
-                class="m-t-4 mat-subtitle-1 f-s-14 f-w-400 m-t-8 text-gray-100"
-              >
-                {{ topcard.subtitle }}
-              </h6>
-            </div>
-          </div>
-        </mat-card-content>
-      </mat-card> -->
-  </div>
-</div>
 
-<div style="margin-bottom: 70px"></div>
 
-<!-- --------------------------------------------------------------------- -->
-<!-- card 2 -->
-<!-- --------------------------------------------------------------------- -->
 
-<!-- <div class="row py-2">
-    <div class="col-md-6"></div>
-    <div class="col-md-6"> </div>
-  </div>
-  
-  <div class="row py-2">
-    <div class="col-md-6"></div>
-    <div class="col-md-6"></div>
-  </div> -->
 <div class="row justify-content-center">
   <div class="col-sm-6 col-lg-4">
-    <a routerLink="/apps/listregclient" routerLinkActive="router-link-active">
+    <a routerLink="/apps/listregclient" routerLinkActive="router-link-active" style="text-decoration: none">
       <mat-card
         class="cardWithShadow card2 position-relative card-hover"
         style="cursor: pointer; min-height: 25vh"
@@ -69,6 +33,7 @@
     <a
       routerLink="/apps/statusregclients"
       routerLinkActive="router-link-active"
+      style="text-decoration: none"
     >
       <mat-card
         class="cardWithShadow card2 position-relative card-hover"
@@ -92,7 +57,7 @@
     </a>
   </div>
 
-  <div class="col-sm-6 col-lg-4">
+  <!-- <div class="col-sm-6 col-lg-4">
     <mat-card
       class="cardWithShadow card2 position-relative card-hover"
       style="cursor: pointer; min-height: 25vh"
@@ -156,5 +121,6 @@
         >
       </mat-card-content>
     </mat-card>
-  </div>
+  </div> -->
+
 </div>
